# Moderix

./: .env.example  .gitignore  ARCHITECTURE.md  DECISION_TREE.md  DEPLOYMENT_GUIDE.md  Dockerfile  Inference.py  README.md  app.py  inference.py  my_env.py  openenv.yaml  pyproject.toml  requirements.txt  walkthrough.md
.github/workflows/: ci.yml
.omg/: project-memory.json
data/: training_set.json
graders/: nsfw_detection.py  nsfw_grader.py  reasoning_grader.py  spam_grader.py  toxicity_detection.py  toxicity_grader.py
moderix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
server/: app.py
